# OS-projects

ArrayModifierThreads/: CMakeLists.txt  README.md  header.h  main.cpp  thread_handling.cpp
ArrayModifierThreads/tests/: tests.cpp
MarkerRandomArrayThreads/: CMakeLists.txt  README.md  functions.cpp  header.h  main.cpp
MarkerRandomArrayThreads/tests/: tests.cpp
MessageSenderProcesses/: CMakeLists.txt  README.md  header.h  receiver.cpp  sender.cpp
MessageSenderProcesses/tests/: tests.cpp
NamedPipeServer/: CMakeLists.txt  Client.cpp  README.md  Server.cpp  common.h
NamedPipeServer/tests/: tests.cpp
SalaryCalculatorProcesses/: CMakeLists.txt  README.md
SalaryCalculatorProcesses/Creator/: Creator.cpp
SalaryCalculatorProcesses/Main/: Main.cpp  header.h
SalaryCalculatorProcesses/Reporter/: Reporter.cpp
